# RulesMaker

./: .gitignore  CMakeLists.txt  InstallerInfo.cmake  VersionInfo.cmake
CMakeSupport/: CMakeLists.txt  CompilerSettings.cmake  FindCreateVersion.cmake  FindDeploy.cmake  FindDeploySystem.cmake  FindDumpCPP.cmake  FindFileForTypeID.cmake  FindGit.cmake  FindIncludeProjectSettings.cmake  FindInstallFile.cmake  Project.cmake  QtCompilerSettings.cmake  QtProject.cmake  Version.h.in
MainWindow/: EmailModel.cpp  EmailModel.h  EmailView.cpp  EmailView.h  EmailView.ui  FilterFromEmailView.cpp  FilterFromEmailView.h  FilterFromEmailView.ui  FoldersModel.cpp  FoldersModel.h  FoldersView.cpp  FoldersView.h  FoldersView.ui  ListFilterModel.h  MainWindow.cpp  MainWindow.h  MainWindow.qrc  MainWindow.ui  RulesModel.cpp  RulesModel.h  RulesView.cpp  RulesView.h  RulesView.ui  SelectAccount.cpp  SelectAccount.h  SelectAccount.ui  Settings.cpp  Settings.h  Settings.ui  ShowRule.cpp  ShowRule.ui  StatusProgress.cpp  StatusProgress.h  StatusProgress.ui  WidgetWithStatus.h  include.cmake
Models/: CMakeLists.txt  EmailModel.cpp  EmailModel.h  FilterFromEmailModel.cpp  FilterFromEmailModel.h  FoldersModel.cpp  FoldersModel.h  ListFilterModel.cpp  ListFilterModel.h  RulesModel.cpp  RulesModel.h  include.cmake
OutlookAPI/: CMakeLists.txt  EmailAddress.cpp  EmailAddress.h  ExceptionHandler.cpp  ExceptionHandler.h  OutlookAPI.cpp  OutlookAPI.h  OutlookAPI_account.cpp  OutlookAPI_copyRules.cpp  OutlookAPI_deleteItem.cpp  OutlookAPI_description.cpp  OutlookAPI_dump.cpp  OutlookAPI_email.cpp  OutlookAPI_emailAddresses.cpp  OutlookAPI_equalRules.cpp  OutlookAPI_folders.cpp  OutlookAPI_loadRules.cpp  OutlookAPI_mergeRules.cpp  OutlookAPI_nameForRules.cpp  OutlookAPI_pri.h  OutlookAPI_rules.cpp  OutlookAPI_settings.cpp  OutlookAPI_toString.cpp  OutlookAPI_tools.cpp  OutlookAPI_utils.cpp  OutlookObj.cpp  OutlookObj.h  SelectAccount.cpp  SelectAccount.h  SelectFolders.cpp  SelectFolders.h  SelectFolders.ui  ShowRule.cpp  ShowRule.h  include.cmake
OutlookLib/: CMakeLists.txt  include.cmake
cli/: CMakeLists.txt  include.cmake  main.cpp  resources
cli/resources/: application.rc
dumpcpp/: CMakeLists.txt  include.cmake  main.cpp
gui/: CMakeLists.txt  include.cmake  main.cpp
main/: CMakeLists.txt  ContactsModel.cpp  ContactsModel.h  ContactsView.cpp  ContactsView.h  ContactsView.ui  EmailGroupingModel.cpp  EmailGroupingModel.h  EmailModel.cpp  EmailModel.h  EmailView.cpp  EmailView.h  EmailView.ui  FoldersDlg.cpp  FoldersDlg.h  FoldersDlg.ui  FoldersModel.cpp  FoldersModel.h  FoldersView.cpp  FoldersView.h  FoldersView.ui  GroupedEmailModel.cpp  GroupedEmailModel.h  ListFilterModel.cpp  ListFilterModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OutlookAPI.cpp  OutlookAPI.h  OutlookAPI_dump.cpp  OutlookAPI_email.cpp  OutlookAPI_getEmailAddresses.cpp  OutlookHelpers.cpp  OutlookHelpers.h  OutlookSetup.cpp  OutlookSetup.h  OutlookSetup.ui  RulesModel.cpp  RulesModel.h  (+11 more)
